# html-entity-map-gen

./: README.md  html-entity-map-gen.cabal  stack.yaml
app/: Main.hs
